--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target lib --formats umd,umd-min --name HcRoadResurfacings",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "esri-loader": "^2.9.1",
     "vue": "^2.6.6",
     "vuex": "^3.0.1"
   },
